Replace handwritten adblock rust FFI with CXX based FFI

--- a/components/brave_shields/adblock/rs/Cargo.toml
+++ b/components/brave_shields/adblock/rs/Cargo.toml
@@ -1,27 +1,18 @@
 [package]
-name = "adblock-ffi"
+name = "adblock-cxx"
 version = "0.1.0"
-authors = ["Brian R. Bondy <netzen@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 adblock = { version = "0.7.16", default-features = false, features = ["full-regex-handling", "debug-info", "css-validation"] }
+cxx = "1.0"
 serde_json = "1.0"
-libc = "0.2"
-
-[lib]
-crate-type = [
-    "rlib",
-]
-name = "adblock_ffi"
+thiserror = "1.0"
 
 [features]
-cbindgen = []
 ios = ["adblock/content-blocking"]
 single_thread_optimizations = ["adblock/object-pooling", "adblock/unsync-regex-caching"]
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
+[lib]
+name = "adblock_cxx"
+crate-type = ["rlib"]
