brave news no sources card android

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -483,6 +483,7 @@ brave_java_resources = [
   "java/res/drawable/ic_brave_battery.xml",
   "java/res/drawable/ic_brave_logo.xml",
   "java/res/drawable/ic_brave_mobiledata.xml",
+  "java/res/drawable/ic_brave_news_no_source.xml",
   "java/res/drawable/ic_brave_notification.xml",
   "java/res/drawable/ic_brave_smiley_happy.xml",
   "java/res/drawable/ic_brave_smiley_sad.xml",
@@ -780,6 +781,7 @@ brave_java_resources = [
   "java/res/layout/brave_dialog_preference.xml",
   "java/res/layout/brave_news_card_menu.xml",
   "java/res/layout/brave_news_load_new_content.xml",
+  "java/res/layout/brave_news_no_sources.xml",
   "java/res/layout/brave_news_row.xml",
   "java/res/layout/brave_news_settings.xml",
   "java/res/layout/brave_news_settings_details.xml",
