Fixed download button is not shown when dangerous file downloaded
fix brave/brave-browser#29651

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -405,6 +405,7 @@ test("brave_unit_tests") {
     ]
     deps += [
       "//brave/app:brave_generated_resources_grit",
+      "//brave/browser/download/bubble:unit_tests",
       "//brave/browser/renderer_context_menu/test:unit_tests",
       "//brave/browser/ui/bookmark",
       "//brave/browser/ui/bookmark:unittest",
