[Brave News]: Remove `voca_rs` dependency (#17923)

--- a/components/brave_news/browser/test/BUILD.gn
+++ b/components/brave_news/browser/test/BUILD.gn
@@ -29,6 +29,7 @@ source_set("brave_news_unit_tests") {
     "//brave/components/brave_news/browser",
     "//brave/components/brave_news/common",
     "//brave/components/brave_news/common:mojom",
+    "//brave/components/brave_news/rust:unit_tests",
     "//brave/components/l10n/common:test_support",
     "//brave/components/time_period_storage",
     "//chrome/browser",
