--- a/browser/permissions/BUILD.gn
+++ b/browser/permissions/BUILD.gn
@@ -29,6 +29,7 @@ if (!is_android) {
       "//brave/components/brave_wallet/browser",
       "//brave/components/brave_wallet/browser:permission_utils",
       "//brave/components/brave_wallet/common",
+      "//brave/components/ephemeral_storage",
       "//brave/components/google_sign_in_permission",
       "//brave/components/localhost_permission",
       "//chrome/browser",
