--- a/components/ephemeral_storage/BUILD.gn
+++ b/components/ephemeral_storage/BUILD.gn
@@ -9,6 +9,7 @@ static_library("ephemeral_storage") {
     "ephemeral_storage_pref_names.h",
     "ephemeral_storage_service.cc",
     "ephemeral_storage_service.h",
+    "ephemeral_storage_service_delegate.h",
     "url_storage_checker.cc",
     "url_storage_checker.h",
   ]
