--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -192,6 +192,7 @@ test("brave_unit_tests") {
     "//brave/chromium_src/components/privacy_sandbox:unit_tests",
     "//brave/chromium_src/net/base:unit_tests",
     "//brave/components/adblock_rust_ffi",
+    "//brave/components/ai_chat:ai_chat_api_unit_tests",
     "//brave/components/api_request_helper:api_request_helper_unit_tests",
     "//brave/components/brave_adaptive_captcha/test:brave_adaptive_captcha_unit_tests",
     "//brave/components/brave_ads/browser:test_support",
