--- a/ui/webui/resources/sources.gni
+++ b/ui/webui/resources/sources.gni
@@ -20,8 +20,12 @@ if (!is_ios) {
     "$brave_resources_extra_grdps_path/brave_fonts_resources.grdp",
     "$brave_resources_extra_grdps_path/brave_static_resources.grdp",
     "$brave_resources_extra_grdps_path/brave_icons_resources.grdp",
+    "$brave_resources_extra_grdps_path/leo/js/leo.grdp",
   ]
-  brave_resources_extra_grdps_deps += [ "//brave/ui/webui/resources:grdp" ]
+  brave_resources_extra_grdps_deps += [
+    "//brave/components/leo",
+    "//brave/ui/webui/resources:grdp",
+  ]
 }
 
 # At the moment, all non-static resources are only required for polymer WebUI.
