Update grdp generation from @petemill's comments

--- a/components/brave_extension/extension/brave_extension/BUILD.gn
+++ b/components/brave_extension/extension/brave_extension/BUILD.gn
@@ -24,7 +24,7 @@ transpile_web_ui("brave_extension") {
 
   # Must match the relative path from the static GRD to the manifest.json
   # plus any other relative path we want these files to live in the extension
-  extra_relative_path = "/brave_extension/out"
+  resource_path_prefix = "brave_extension/out"
 
   # WDP node_modules is not an ancestor of its generated code, which still
   # contains module imports.
