--- a/chromium_presubmit_config.json5
+++ b/chromium_presubmit_config.json5
@@ -153,6 +153,7 @@
     "CheckWebDevStyle": [
       "components/speedreader/resources/speedreader-desktop.css",
       "components/speedreader/resources/third_party/",
+      "components/webpack/gen-webpack-grd.js",
       "test/data/speedreader/",
     ]
   },
