Add Wireguard based vpn service

--- a/components/brave_vpn/browser/connection/BUILD.gn
+++ b/components/brave_vpn/browser/connection/BUILD.gn
@@ -19,6 +19,7 @@ source_set("api") {
     "//brave/components/brave_vpn/browser/connection:common",
     "//brave/components/brave_vpn/common",
     "//brave/components/brave_vpn/common/mojom",
+    "//components/prefs",
     "//services/network/public/cpp",
   ]
 }
