--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -57,6 +57,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/PortfolioModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/SendModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/SwapModel.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/domain/TransactionsModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/UserAssetModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/WalletModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/helpers/Api33AndPlusBackPressHelper.java",
@@ -131,6 +132,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/PortfolioFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SolanaTxDetailsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/SwapBottomSheetDialogFragment.java",
+  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TransactionsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TwoLineItemFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxDetailsFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/fragments/TxFragment.java",
