show approve dialog  and clean up

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -172,6 +172,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/Amount.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/NetworkInfoPresenter.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/presenters/SolanaInstructionPresenter.java",
+  "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AccountUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AccountsPermissionsHelper.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AddressUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/crypto_wallet/util/AndroidUtils.java",
