--- a/ui/webui/resources/sources.gni
+++ b/ui/webui/resources/sources.gni
@@ -22,10 +22,7 @@ if (!is_ios) {
     "$brave_resources_extra_grdps_path/brave_icons_resources.grdp",
     "$root_gen_dir/brave/web-ui-leo/leo.grdp",
   ]
-  brave_resources_extra_grdps_deps += [
-    "//brave/components/leo",
-    "//brave/ui/webui/resources:grdp",
-  ]
+  brave_resources_extra_grdps_deps += [ "//brave/ui/webui/resources:grdp" ]
 }
 
 # At the moment, all non-static resources are only required for polymer WebUI.
