chore(wallet): Swap V2 integration fixes

--- a/package.json
+++ b/package.json
@@ -276,13 +276,13 @@
   "devDependencies": {
     "@babel/core": "7.16.0",
     "@babel/plugin-proposal-export-namespace-from": "7.16.0",
-    "@brave/swap-interface": "2.1.1",
     "@storybook/addon-essentials": "6.4.13",
     "@storybook/addon-knobs": "6.4.0",
     "@storybook/addons": "6.4.13",
     "@storybook/react": "6.4.13",
     "@testing-library/react-hooks": "7.0.2",
     "@types/array-move": "2.0.0",
+    "@types/async": "^3.2.20",
     "@types/chrome": "0.0.222",
     "@types/enzyme": "3.10.12",
     "@types/enzyme-adapter-react-16": "1.0.6",
@@ -368,6 +368,7 @@
     "@types/react-router-dom": "^5.1.9",
     "@types/webtorrent": "^0.109.0",
     "array-move": "^2.2.1",
+    "async": "^3.2.4",
     "bignumber.js": "^9.0.2",
     "core-js": "^3.9.1",
     "date-fns": "^2.15.0",
