Only load Brave Ads text embedding resource if user has opted-in to Brave Private Ads

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -1092,6 +1092,7 @@ source_set("internal") {
     "resources/contextual/text_classification/text_classification_resource.h",
     "resources/contextual/text_embedding/text_embedding_resource.cc",
     "resources/contextual/text_embedding/text_embedding_resource.h",
+    "resources/contextual/text_embedding/text_embedding_resource_constants.h",
     "resources/country_components.cc",
     "resources/country_components.h",
     "resources/language_components.cc",
