Only load Brave Ads purchase intent resource if user has opted-in to Brave News or Brave Private Ads

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -1080,6 +1080,7 @@ source_set("internal") {
     "resources/behavioral/purchase_intent/purchase_intent_info.h",
     "resources/behavioral/purchase_intent/purchase_intent_resource.cc",
     "resources/behavioral/purchase_intent/purchase_intent_resource.h",
+    "resources/behavioral/purchase_intent/purchase_intent_resource_constants.h",
     "resources/behavioral/purchase_intent/purchase_intent_segment_keyword_info.cc",
     "resources/behavioral/purchase_intent/purchase_intent_segment_keyword_info.h",
     "resources/behavioral/purchase_intent/purchase_intent_signal_history_info.cc",
