--- a/components/brave_ads/core/test/BUILD.gn
+++ b/components/brave_ads/core/test/BUILD.gn
@@ -244,6 +244,7 @@ source_set("brave_ads_unit_tests") {
     "//brave/components/brave_ads/core/internal/common/calendar/calendar_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/common/containers/container_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/common/crypto/crypto_util_unittest.cc",
+    "//brave/components/brave_ads/core/internal/common/locale/locale_util_unittest.cc",
     "//brave/components/brave_ads/core/internal/common/locale/subdivision_code_unittest_util.cc",
     "//brave/components/brave_ads/core/internal/common/locale/subdivision_code_unittest_util.h",
     "//brave/components/brave_ads/core/internal/common/locale/subdivision_code_util_unittest.cc",
