--- a/components/resources/BUILD.gn
+++ b/components/resources/BUILD.gn
@@ -66,6 +66,7 @@ repack("resources") {
       "$root_gen_dir/brave/components/brave_adblock/resources/brave_adblock_generated.pak",
       "$root_gen_dir/brave/components/cosmetic_filters/resources/cosmetic_filters_generated.pak",
       "$root_gen_dir/brave/components/skus/browser/resources/skus_internals_generated.pak",
+      "$root_gen_dir/brave/components/brave_news/browser/resources/brave_news_inspect_generated.pak",
     ]
   }
 
@@ -78,6 +79,7 @@ repack("resources") {
       "//brave/components/brave_welcome_ui:generated_resources",
       "//brave/components/speedreader/resources/panel:generated_resources",
       "//brave/components/webcompat_reporter/ui:generated_resources",
+      "//brave/components/brave_news/browser/resources:generated_resources",
     ]
 
     sources += [
