--- a/components/brave_news/browser/BUILD.gn
+++ b/components/brave_news/browser/BUILD.gn
@@ -32,8 +32,12 @@ static_library("browser") {
     "publishers_controller.h",
     "publishers_parsing.cc",
     "publishers_parsing.h",
+    "raw_feed_controller.cc",
+    "raw_feed_controller.h",
     "suggestions_controller.cc",
     "suggestions_controller.h",
+    "signals_controller.cc",
+    "signals_controller.h",
     "unsupported_publisher_migrator.cc",
     "unsupported_publisher_migrator.h",
     "urls.cc",
