Implement Estimated Earnings indicator 2.0

--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -398,6 +398,7 @@ brave_java_resources = [
   "java/res/drawable/brave_notification_permission_rationale_dialog_header.xml",
   "java/res/drawable/brave_rating_emoji_bg.xml",
   "java/res/drawable/brave_rating_rate_now_bg.xml",
+  "java/res/drawable/brave_rewards_ads_month_background.xml",
   "java/res/drawable/brave_rewards_circle.xml",
   "java/res/drawable/brave_rewards_onboarding_default.xml",
   "java/res/drawable/brave_rewards_onboarding_selected.xml",
@@ -593,6 +594,7 @@ brave_java_resources = [
   "java/res/drawable/ic_rate.xml",
   "java/res/drawable/ic_readermode.xml",
   "java/res/drawable/ic_refresh_20.xml",
+  "java/res/drawable/ic_reward_info_outline.xml",
   "java/res/drawable/ic_rewards.xml",
   "java/res/drawable/ic_rewards_noti_warning_circle.xml",
   "java/res/drawable/ic_rocket.xml",
@@ -723,6 +725,7 @@ brave_java_resources = [
   "java/res/drawable/tipping_send_button_background_disabled.xml",
   "java/res/drawable/tipping_send_button_background_selector.xml",
   "java/res/drawable/tipping_verified_creator_tooltip_background.xml",
+  "java/res/drawable/tooltip_arrow.xml",
   "java/res/drawable/transak_logo.xml",
   "java/res/drawable/transparent_bg_bordered.xml",
   "java/res/drawable/transparent_shadow_background.xml",
@@ -739,10 +742,6 @@ brave_java_resources = [
   "java/res/drawable/white_rounded_holo_button_thin.xml",
   "java/res/drawable/yearly_selector.xml",
   "java/res/drawable/you_are_not_earning_rewards_background.xml",
-  "java/res/font/poppins_300.ttf",
-  "java/res/font/poppins_400.ttf",
-  "java/res/font/poppins_500.ttf",
-  "java/res/font/poppins_600.ttf",
   "java/res/layout-land/brave_shields_stats_row.xml",
   "java/res/layout-land/verify_wallet_activity.xml",
   "java/res/layout-sw600dp-land/brave_shields_stats_row.xml",
