--- a/browser/brave_wallet/BUILD.gn
+++ b/browser/brave_wallet/BUILD.gn
@@ -172,6 +172,7 @@ source_set("unit_tests") {
     "brave_wallet_p3a_unittest.cc",
     "brave_wallet_prefs_unittest.cc",
     "brave_wallet_service_unittest.cc",
+    "eth_allowance_manager_unittest.cc",
     "eth_pending_tx_tracker_unittest.cc",
     "filecoin_keyring_unittest.cc",
     "keyring_service_unittest.cc",
