--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -106,6 +106,7 @@ source_set("ui") {
       "content_settings/brave_content_setting_image_models.h",
       "omnibox/brave_omnibox_client_impl.cc",
       "omnibox/brave_omnibox_client_impl.h",
+      "page_action/brave_page_action_icon_type.h",
       "session_crashed_bubble_brave.cc",
       "side_panel/ai_chat/ai_chat_side_panel_utils.cc",
       "side_panel/ai_chat/ai_chat_side_panel_utils.h",
@@ -298,6 +299,12 @@ source_set("ui") {
       "views/omnibox/brave_rounded_omnibox_results_frame.h",
       "views/omnibox/brave_search_conversion_promotion_view.cc",
       "views/omnibox/brave_search_conversion_promotion_view.h",
+      "views/page_action/brave_page_action_icon_container_view.cc",
+      "views/page_action/brave_page_action_icon_container_view.h",
+      "views/playlist/playlist_action_bubble_view.cc",
+      "views/playlist/playlist_action_bubble_view.h",
+      "views/playlist/playlist_action_icon_view.cc",
+      "views/playlist/playlist_action_icon_view.h",
       "views/rounded_separator.cc",
       "views/rounded_separator.h",
       "views/side_panel/ai_chat/ai_chat_side_panel_coordinator.cc",
