--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -769,6 +769,7 @@ brave_java_resources = [
   "java/res/layout/activity_tipping_banner_mobile.xml",
   "java/res/layout/activity_welcome_onboarding.xml",
   "java/res/layout/application_item_layout.xml",
+  "java/res/layout/tx_details_bottom_sheet.xml",
   "java/res/layout/approve_tx_bottom_sheet.xml",
   "java/res/layout/block_cookie_consent_notices_tooltip.xml",
   "java/res/layout/bottom_toolbar.xml",
@@ -892,6 +893,7 @@ brave_java_resources = [
   "java/res/layout/fragment_transactions.xml",
   "java/res/layout/fragment_troubleshooting_onboarding.xml",
   "java/res/layout/fragment_two_line_item_list.xml",
+  "java/res/layout/item_two_line_horizontal.xml",
   "java/res/layout/fragment_unlock_wallet.xml",
   "java/res/layout/fragment_verify_recovery_phrase.xml",
   "java/res/layout/fragment_vpn_callout_dialog.xml",
