Initial implementation for market model

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -52,6 +52,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/CryptoSharedData.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/DappsModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/KeyringModel.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/domain/MarketModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/NetworkModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/NetworkSelectorModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/PortfolioModel.java",
