--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -458,6 +458,7 @@ brave_java_resources = [
   "java/res/drawable/ic_basic_check.xml",
   "java/res/drawable/ic_bat_color.xml",
   "java/res/drawable/ic_bat_unverified_off.xml",
+  "java/res/drawable/ic_bear_arrow.xml",
   "java/res/drawable/ic_bell_icon.xml",
   "java/res/drawable/ic_bg.xml",
   "java/res/drawable/ic_bg_video_playback.xml",
@@ -477,6 +478,7 @@ brave_java_resources = [
   "java/res/drawable/ic_brave_smiley_happy.xml",
   "java/res/drawable/ic_brave_smiley_sad.xml",
   "java/res/drawable/ic_brave_vpn_graphic.xml",
+  "java/res/drawable/ic_bull_arrow.xml",
   "java/res/drawable/ic_calendar.xml",
   "java/res/drawable/ic_carat_down.xml",
   "java/res/drawable/ic_carat_down_country_spinner.xml",
