--- a/components/brave_rewards/core/test/BUILD.gn
+++ b/components/brave_rewards/core/test/BUILD.gn
@@ -93,6 +93,7 @@ source_set("test") {
     "//brave/components/brave_rewards/core/publisher/publisher_unittest.cc",
     "//brave/components/brave_rewards/core/test/bat_ledger_test.cc",
     "//brave/components/brave_rewards/core/test/bat_ledger_test.h",
+    "//brave/components/brave_rewards/core/test/mock_ledger_test.h",
     "//brave/components/brave_rewards/core/test/test_ledger_client.cc",
     "//brave/components/brave_rewards/core/test/test_ledger_client.h",
     "//brave/components/brave_rewards/core/test/test_ledger_client_unittest.cc",
