Remove BraveNewsV2 Flag
Remove Android BraveNewsV1

--- a/components/brave_news/browser/test/BUILD.gn
+++ b/components/brave_news/browser/test/BUILD.gn
@@ -20,7 +20,6 @@ source_set("brave_news_unit_tests") {
     "//brave/components/brave_news/browser/publishers_parsing_unittest.cc",
     "//brave/components/brave_news/browser/suggestions_controller_unittest.cc",
     "//brave/components/brave_news/browser/unsupported_publisher_migrator_unittest.cc",
-    "//brave/components/brave_news/browser/urls_unittest.cc",
   ]
 
   deps = [
@@ -30,6 +29,7 @@ source_set("brave_news_unit_tests") {
     "//brave/components/brave_news/common",
     "//brave/components/brave_news/common:mojom",
     "//brave/components/brave_news/rust:unit_tests",
+    "//brave/components/l10n/common",
     "//brave/components/l10n/common:test_support",
     "//brave/components/time_period_storage",
     "//chrome/browser",
