Refactor Brave Ads wallet

--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -183,10 +183,10 @@ source_set("internal") {
     "account/user_data/user_data_builder_interface.h",
     "account/user_data/version_number_user_data.cc",
     "account/user_data/version_number_user_data.h",
-    "account/wallet/wallet.cc",
-    "account/wallet/wallet.h",
     "account/wallet/wallet_info.cc",
     "account/wallet/wallet_info.h",
+    "account/wallet/wallet_util.cc",
+    "account/wallet/wallet_util.h",
     "ad_constants.cc",
     "ad_type.cc",
     "ads.cc",
