--- a/android/brave_java_resources.gni
+++ b/android/brave_java_resources.gni
@@ -980,6 +980,7 @@ brave_java_resources = [
   "java/res/values/brave_dimens.xml",
   "java/res/values/brave_ids.xml",
   "java/res/values/brave_styles.xml",
+  "java/res/values/shimmer_attrs.xml",
   "java/res/xml/appearance_preferences.xml",
   "java/res/xml/background_images_preferences.xml",
   "java/res/xml/brave_download_preferences.xml",
