--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -1099,6 +1099,8 @@ source_set("internal") {
     "resources/resource_parsing_error_or.h",
     "resources/resources_util.h",
     "resources/resources_util_impl.h",
+    "sanitize/sanitize_util.cc",
+    "sanitize/sanitize_util.h",
     "segments/segment_alias.h",
     "segments/segment_util.cc",
     "segments/segment_util.h",
@@ -1187,6 +1189,7 @@ source_set("internal") {
     "//brave/components/brave_rewards/core",
     "//brave/components/constants",
     "//brave/components/l10n/common",
+    "//brave/components/text_sanitize/rs:cxx",
     "//brave/components/version_info",
     "//brave/third_party/challenge_bypass_ristretto_ffi",
     "//brave/third_party/rapidjson",
