Integrate Shimmer library source code (#18618)
Adds a reduced and improved version of the Shimmer library

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -61,6 +61,9 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/app/domain/WalletModel.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/helpers/Api33AndPlusBackPressHelper.java",
   "../../brave/android/java/org/chromium/chrome/browser/app/helpers/ImageLoader.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/shimmer/Shimmer.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/shimmer/ShimmerDrawable.java",
+  "../../brave/android/java/org/chromium/chrome/browser/app/shimmer/ShimmerFrameLayout.java",
   "../../brave/android/java/org/chromium/chrome/browser/appmenu/BraveTabbedAppMenuPropertiesDelegate.java",
   "../../brave/android/java/org/chromium/chrome/browser/autofill/BraveAutofillPopupBridge.java",
   "../../brave/android/java/org/chromium/chrome/browser/bookmarks/BraveBookmarkBridge.java",
