--- a/components/brave_vpn/browser/connection/common/win/BUILD.gn
+++ b/components/brave_vpn/browser/connection/common/win/BUILD.gn
@@ -7,6 +7,8 @@ assert(is_win)
 
 source_set("win") {
   sources = [
+    "brave_windows_service_watcher.cc",
+    "brave_windows_service_watcher.h",
     "scoped_sc_handle.h",
     "utils.cc",
     "utils.h",
