--- a/app/vector_icons/BUILD.gn
+++ b/app/vector_icons/BUILD.gn
@@ -23,8 +23,6 @@ aggregate_vector_icons("brave_vector_icons") {
     "download_unlock.icon",
     "open_in_ipfs.icon",
     "open_in_tor.icon",
-    "playlist_action.icon",
-    "playlist_action_added.icon",
     "sidebar_toolbar_button.icon",
     "sidebar_toolbar_button_right.icon",
     "vpn_indicator.icon",
@@ -45,6 +43,8 @@ aggregate_vector_icons("brave_vector_icons") {
   if (toolkit_views) {
     leo_icons += [
       "leo_plus_add.icon",
+      "leo_product_playlist_add.icon",
+      "leo_product_playlist_added.icon",
       "leo_search.icon",
     ]
   }
