--- a/browser/playlist/sources.gni
+++ b/browser/playlist/sources.gni
@@ -14,6 +14,7 @@ if (enable_playlist) {
     "//brave/browser/playlist/playlist_service_factory.h",
     "//brave/browser/playlist/playlist_tab_helper.cc",
     "//brave/browser/playlist/playlist_tab_helper.h",
+    "//brave/browser/playlist/playlist_tab_helper_observer.h",
   ]
 
   brave_browser_playlist_deps += [
